# LAND.E

./: .gitignore  README.md  exploration.ipynb  outline.md  presentation.md  pyproject.toml  slides.html  slides.md  test-new-models.ipynb
.pi/: gsd-file-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: 2026-04-09-dashboard-click-tooltips-labels.md  2026-04-09-dashboard-graph-character-hover-name.md  2026-04-09-dashboard-graph-click-fix-v2.md  (+10 more)
00-dev-log/: 2025-12-30.md
02-worktrees/: README.md
03-app/: app.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/db/migrations/: 001_initial.sql  002_graph_support.sql  003_cross_story_characters.sql
backend/app/models/: database.py  schemas.py
backend/app/routers/: characters.py  llm.py  stories.py  ws.py
backend/app/services/: export.py  llm.py  story.py
backend/data/: stories.db
backend/scripts/: seed_canonical_characters.py
experiments-with-models/: 00-template-for-new-models.ipynb  gemma2:27b-instruct-q5_K_S.ipynb  gemma2:9b-instruct-fp16.ipynb  gemma2:9b-instruct-q8_0.ipynb  gemma3:12b-it-q8_0.ipynb  gemma3:27b-it-q4_K_M.ipynb  gpt-oss.ipynb  qwen.ipynb  qwen3:30b-a3b-instruct-2507-q4_K_M .ipynb  qwen3:4b-instruct-2507-fp16.ipynb  unsloth-gemma3-27b.ipynb  unsloth-gpt-oss-20b-GGUF.ipynb
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+122 files in other folders)
