[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.129.0",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]
